# ordigi

./: .drone.yml  .gitignore  .gitlab-ci.yml  README.md  cli.py  config.ini-sample  dozo.py  elodie.py  ordigi.conf  ordigi.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.cfg  workflow.sh
.github/: FUNDING.yml
dozo/: config.py  constants.py  database.py  exiftool.py  filesystem.py  geolocation.py  summary.py
dozo/media/: audio.py  media.py  photo.py
elodie/: compatability.py  config.py  constants.py  dependencies.py  filesystem.py  geolocation.py  localstorage.py  log.py
elodie/media/: audio.py  base.py  media.py  photo.py  video.py
elodie/plugins/: plugins.py
elodie/plugins/dummy/: dummy.py
elodie/plugins/throwerror/: throwerror.py
elodie/tests/: config_test.py  elodie_test.py  filesystem_test.py  geolocation_test.py  plugins_test.py  run_tests.py
elodie/tools/: add_original_name.py
old_tests/: helper.py  test_config.py  test_constants.py  test_elodie.py  test_geolocation.py  test_log.py
old_tests/media/: test_audio.py  test_photo.py  test_video.py
ordigi/: __init__.py  cli.py  collection.py  config.py  constants.py  database.py  exiftool.py  filesystem.py  geolocation.py  images.py  log.py  media.py  request.py  summary.py  utils.py
ordigi/media/: audio.py  media.py  video.py
tests/: config_test.py  conftest.py  constants_test.py  elodie_test.py  filesystem_test.py  geolocation_test.py  helper.py  localstorage_test.py  plugins_test.py  result_test.py  test_cli.py  test_collection.py  test_config.py  test_database.py  test_dozo.py  test_elodie.py  test_exiftool.py  test_filesystem.py  test_geolocation.py  test_localstorage.py  test_media.py
tests/media/: audio_test.py  base_test.py  photo_test.py  test_audio.py  test_media.py  test_photo.py  test_video.py  video_test.py
(+4 files in other folders)
