[metadata]
# For upload use:
# name = example-pkg-YOUR-USERNAME-HERE
name = ordigi-pkg-local
version = 0.1.0
author = Cedric Leporcq
author_email = cedl38@gmail.com
description = Media organizer tools
long_description = file: README.md
long_description_content_type = text/markdown
# url = 
# project_urls =
#     Bug Tracker = 
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL version 3
    Operating System :: OS Independent

[options]
# package_dir = ordigi
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    tests
    docs

[options.entry_points]
console_scripts =
    ordigi = ordigi.cli:cli

[flake8]

[pycodestyle]
max-line-length = 88

